# elwaspatid

./: .env  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  notes.md  setup.cfg  setup.py  test.rst
docs/: RTDrequirements.txt  RTDrequirements_short.txt  RTDrequirmnt.txt  changelog.rst  conf.py  getting-started.rst  index.rst
docs/_build/doctrees/: api.doctree  (+4 more)
docs/auto_examples/: index.rst  plot_0_Waveprop.ipynb  plot_0_Waveprop.py  plot_0_Waveprop.py.md5  plot_0_Waveprop.rst  plot_0_Waveprop_codeobj.pickle  plot_1_WP2.ipynb  plot_1_WP2.py  plot_1_WP2.py.md5  plot_1_WP2.rst  plot_1_WP2_codeobj.pickle  plot_2_ElasticImpact.ipynb  plot_2_ElasticImpact.py  plot_2_ElasticImpact.py.md5  plot_2_ElasticImpact.rst  plot_2_ElasticImpact_codeobj.pickle  plot_2_SHPB.ipynb  plot_2_SHPB.py.md5  plot_2_SHPB.rst  plot_2_SHPB_codeobj.pickle  plot_3_ElasticImpact.rst  plot_3_ElasticImpact_codeobj.pickle  plot_3_deSaintVenant.ipynb  plot_3_deSaintVenant.py  plot_3_deSaintVenant.py.md5  plot_3_deSaintVenant.rst  plot_3_deSaintVenant_codeobj.pickle  plot_4_SHPB.ipynb  plot_4_SHPB.py  plot_4_SHPB.py.md5  plot_4_SHPB.rst  plot_4_SHPB_codeobj.pickle  plot_4_contactLoss.ipynb  plot_4_contactLoss.py.md5  plot_4_contactLoss.rst  plot_4_contactLoss_codeobj.pickle  plot_5_contactLoss.ipynb  plot_5_contactLoss.py  plot_5_contactLoss.py.md5  plot_5_contactLoss.rst  (+15 more)
examples/: README.rst  plot_0_Waveprop.py  plot_1_WP2.py  plot_2_ElasticImpact.py  plot_3_deSaintVenant.py  plot_4_SHPB.py  plot_4_contactLoss.py  plot_5_contactLoss.py  plot_6_deSaintVenant.py  plot_6_underHood.py
paper/: bacchini.bib  bacon.bib  dejuhasz.bib  desaintvenant.bib  fischer.bib  herrmann.bib  johnson.bib  kalkowski.bib  lowe.bib  paper.bib  paper.md  reviewers.odt  shpb.bib  williams.bib
src/1d_wave_prop/: prop1D.py
src/ELWA_SPATID.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/elwaspatid/: elwaspatid.py
src/elwaspatid.egg-info/: PKG-INFO  SOURCES.txt
(+76 files in other folders)
