[metadata]
name = wave-space-time-diagrams
version = 0.0.3
author = Denis Brizard
author_email = denis.brizard@univ-eiffel.fr
description = Space-time diagrams for 1D longitudinal elastic wave propagation in rod
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dbrizard/space_time_diagrams
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
keywords = wave propagation, SHPB, 1D, traction, compression

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
