[metadata]
name = elwaspatid
version = 2.0.1-beta
author = Denis Brizard
author_email = denis.brizard@univ-eiffel.fr
description = Space-time diagrams for the propagation of elastic waves in 1D rods.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dbrizard/elwaspatid
project_urls =
    Documentation = https://elwaspatid.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3.0
    Operating System :: OS Independent
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
keywords = wave propagation, elastic wave, SHPB, rod, 1D, traction, compression, Lagrangian x-t diagram

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
